--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,12 @@
         <title>Gordon Forms</title>
     </head>
     <body>
-        <h1>Gordon Forms</h1>
+        <h1 id="title">Gordon Forms</h1>
+        <div id="content">
+            <h2>Create a form!</h2>
+            <form method="post" action="/new">
+                <input name="create-form" id="create-btn" type="button" value="Click Here!">
+            </form>
+        </div>
     </body>
 </html>
