--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,20 @@
 body {
     text-align: center;
+    background-color: gray;
+}
+
+#content {
+    background-color: white;
+    width: 50%;
+    padding: 50px;
+    margin: auto;
+    border-radius: 10px;
+}
+
+#create-btn {
+    background-color: white;
+}
+
+#create-btn:hover {
+    background-color: cyan;
 }
